tests/NormalTests/paczka1/small_fuzzy/24434340.err
Error in line 2: oug5vodLCI A197 43,7
Error in line 10: zRwMDDFGtyr A197 98,9
